syntax = "proto3";

// See README.md in this directory for a description of these.
package protocol;
option csharp_namespace = "Couchbase.Grpc.Protocol";
option java_package = "com.couchbase.grpc.sdk.protocol";
option go_package = "github.com/couchbaselabs/transactions-fit-performer/protocol";
option java_multiple_files = true;

import "sdk_basic.proto";

message CommandInsert {
  BucketInfo bucketInfo = 1;
  string contentJson = 2;
}

message CommandGet {
  BucketInfo bucketInfo = 1;
  string keyPreface = 2;
}

message CommandRemove {
  BucketInfo bucketInfo = 1;
  string keyPreface = 2;
}

message CommandReplace{
  BucketInfo bucketInfo = 1;
  string keyPreface = 2;
  string contentJson = 4;
}

message SdkCommand {
  oneof command {
    CommandInsert insert = 1;
    CommandGet get = 2;
    CommandRemove remove = 3;
    CommandReplace replace = 4;
  }
}

enum SdkException {
  //TODO: Need a more comprehensive list of exceptions that can occur
  NO_EXCEPTION_THROWN = 0;
  EXCEPTION = 1;
  EXCEPTION_UNKNOWN = 2;
}

enum ExternalException {
  Unknown = 0;
}